aws/k8s/was-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
spec:
  replicas: 1
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: was
        image: 계정id.dkr.ecr.ap-northeast-2.amazonaws.com/pizza/pizza-web:1.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi" 
---
apiVersion: v1
kind: Service
metadata:
  name: was-service
spec:
  selector:
    app: was
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
